--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}Product Catalog{% endblock %}</title>
+        <title>{% block title %}Catalog{% endblock %}</title>
         {% block stylesheets %}
             <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
@@ -60,6 +60,7 @@
         {% endfor %}
 
         {% block body %}{% endblock %}
+
         {% block javascripts %}
             <script src="http://code.jquery.com/jquery-2.2.4.min.js"
                     integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
