--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -1,34 +1,42 @@
-{% extends 'base.html.twig' %}
+{% extends 'default/index.html.twig' %}
 
-{% block body %}
-    <div class="container">
-        <div class="row">
-            <div class="col s12">
-                <h2>Login</h2>
-
-                {% if message %}
-                    <div class="card-panel green lighten-2">
-                        {{ message }}
-                    </div>
-                {% endif %}
-
-                {{ form_start(form) }}
-                    {{ form_row(form._username, { 'label': 'Email'}) }}
-                    {{ form_row(form._password) }}
-
-                    <button type="submit" class="btn">Login<i class="material-icons right">lock</i></button>
-                    &nbsp;
-                    <a href="{{ path('user_register') }}" class="btn">Register</a>
-                    <a style="float: right" href="{{ path('password_recovery') }}">Forgot password?</a>
-                {{ form_end(form) }}
-            </div>
-        </div>
-    </div>
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" type="text/css" href="{{ asset('css/sign-in.css') }}">
 {% endblock %}
 
-    {% block javascripts %}
+{% block body %}
+
+    {% if error %}
+        {% include 'form-error.html.twig' with {'error': error.messageKey|trans(error.messageData, 'security')} %}
+    {% endif %}
+
+    <a class="logo alone" href="{{ url('homepage') }}">ProductCatalog</a>
+    {% block particles %}
         {{ parent() }}
-        {% if error %}
-            {% include 'form-error.html.twig' with {'error': error.messageKey|trans(error.messageData, 'security')} %}
-        {% endif %}
+        <div class="form-container">
+            <div class="row">
+                <div class="col s12">
+                    {% if message %}
+                        <div class="card-panel green lighten-2">
+                            {{ message }}
+                        </div>
+                    {% endif %}
+
+                    {{ form_start(form, { 'attr': {'class': 'rounded row'} }) }}
+                    <h4 class="form-header">Log In</h4>
+                    <a class="right btn-flat waves-effect link-to-recovery" href="{{ path('password_recovery') }}">Forgot password?</a>
+                    {{ form_row(form._username, { 'label': 'Email'}) }}
+                    {{ form_row(form._password) }}
+                    <button type="submit" class="col s4 btn waves-effect blue darken-4">Login</button>
+                    <a class="right btn waves-effect red " href="{{ url('user_register') }}">Already registered?</a>
+                    <!--<a href="{{ path('user_register') }}" class="btn">Register</a>-->
+
+                    {{ form_end(form) }}
+                </div>
+            </div>
+        </div>
     {% endblock %}
+    {% include 'footer.html.twig' %}
+{% endblock %}
+
