Added product details page and modal skeletons. Details page opens on product name click (route is /admin/product/{id}/show). Details modal opens on product id click.

--- a/app/Resources/views/admin/product/list.html.twig
+++ b/app/Resources/views/admin/product/list.html.twig
@@ -34,8 +34,18 @@
                         <tbody>
                         {% for product in products %}
                             <tr>
-                                <td>{{ product.id }}</td>
-                                <td>{{ product.name }}</td>
+                                <td>
+                                    <a href="#modal{{ product.id }}">{{ product.id }}</a>
+                                </td>
+                                <div class="modal" id="modal{{ product.id }}">
+                                    <div class="modal-content">
+                                        <h4>{{ product.name }}</h4>
+                                        <p>{{ product.description }}</p>
+                                    </div>
+                                </div>
+                                <td>
+                                    <a href="{{ path('admin_product_show', { 'id': product.id }) }}">{{ product.name }}</a>
+                                </td>
                                 <td>{{ product.category }}</td>
                                 <td>{{ product.sku }}</td>
                                 <td>{{ product.description }}</td>
@@ -43,10 +53,11 @@
                                 <td>{{ product.updatedAt|date("d/m/Y") }}</td>
                                 {% if is_granted("ROLE_MANAGE_PRODUCT") %}
                                 <td>
-                                    <a href="{{ path('admin_product_edit', {'id': product.id}) }}"><i class="material-icons grey-text">edit</i></a>
+                                    <a href="{{ path('admin_product_edit', { 'id': product.id }) }}"><i class="material-icons grey-text">edit</i></a>
                                 </td>
                                 {% endif %}
                             </tr>
+
                         {% endfor %}
                         </tbody>
                     </table>
@@ -55,3 +66,15 @@
         </div>
     </div>
 {% endblock body%}
+
+{% block javascripts %}
+{{ parent() }}
+
+    <script>
+        $(document).ready(function(){
+            // the "href" attribute of .modal-trigger must specify the modal ID that wants to be triggered
+            $('.modal').modal();
+        });
+    </script>
+
+{% endblock %}
