--- a/app/Resources/views/password-recovery.html.twig
+++ b/app/Resources/views/password-recovery.html.twig
@@ -1,18 +1,37 @@
-{% extends 'base.html.twig' %}
+{% extends 'default/index.html.twig' %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" type="text/css" href="{{ asset('css/sign-in.css') }}">
+    <style>
+        .form-container form {
+            min-width: 500px;
+        }
+    </style>
+{% endblock %}
 
 {% block body %}
-    <div class="row">
-        <div class="row col s6 push-s3">
-            <div class="col s12"><h2>Password recovery</h2></div>
-            {{ form_start(form, {'class': 'col s12', 'id': "recovery-form-send"}) }}
-                <div class="input-field col s12">
-                    {{ form_row(form.email, { 'class': 'validate' }) }}
+    <a class="logo alone" href="{{ url('homepage') }}">ProductCatalog</a>
+
+    {% block particles %}
+        {{ parent() }}
+        <div class="form-container">
+            <div class="row">
+                <div class="row col s8">
+                    {{ form_start(form, { 'attr':{ 'class': 'rounded', 'id': "recovery-form-send"} } ) }}
+                    <h2 class="form-header">Password recovery</h2>
+                    <div class="input-field col s12">
+                        {{ form_row(form.email, { 'class': 'validate' }) }}
+                    </div>
+                    <input type="submit" class="btn blue darken-4 btn-block" value="{{ btn_send_text }}">
+                    {{ form_rest(form) }}
+                    {{ form_end(form) }}
                 </div>
-                <input type="submit" class="btn btn-block" value="{{ btn_send_text }}">
-                {{ form_rest(form) }}
-            {{ form_end(form) }}
+            </div>
         </div>
-    </div>
+    {% endblock %}
+
+    {% include 'footer.html.twig' %}
 {% endblock body %}
 
 {% if error %}
