--- a/app/Resources/views/admin/category/list.html.twig
+++ b/app/Resources/views/admin/category/list.html.twig
@@ -1,18 +1,23 @@
 {% extends 'base.html.twig' %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" type="text/css" href="{{ asset('css/admin.css') }}">
+{% endblock %}
+
+
 {% block body %}
-    {% include 'breadcrumbs.html.twig' %}
     <div class="container">
         <div class="row">
 
             <div class="col s12">
                 <div class="row valign-wrapper">
-                    <div class="col s9 valign"><h2>Categories</h2></div>
-                    <div class="col s2 valign">
-                        <a href="{{ path('admin_product_new') }}" class="btn left"><i class="material-icons left">add_circle_outline</i>product</a>
+                    <div class="col s9 valign left"><h2>Categories</h2></div>
+                    <div class="col s3 valign">
+                        <a href="{{ path('admin_product_new') }}" class="btn left right"><i class="material-icons left">add_circle_outline</i>product</a>
                     </div>
-                    <div class="col s2 valign">
-                        <a href="{{ path('admin_category_new') }}" class="btn"><i class="material-icons left">add_circle_outline</i>category</a>
+                    <div class="col s3 valign">
+                        <a href="{{ path('admin_category_new') }}" class="btn right"><i class="material-icons left">add_circle_outline</i>category</a>
                     </div>
                 </div>
                 <div class="col s12">
